# llm-rate-limiter

./: README.md  example.py  pyproject.toml  requirements-extras.txt  requirements.txt  setup.py
src/llm_rate_limiter/: __init__.py  cli.py  configs.py  constants.py  default_rate_limits.yaml  monitor.py  rate_limit.py  ui.py
