[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rate-limiter"
version = "0.1.0"
description = "A rate limiter for LLM API calls with built-in monitoring"
authors = [
    { name = "Jacob Phillips", email = "jacob.phillips8905@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "draccus",
    "pyyaml",
    "aiohttp",
]

[project.optional-dependencies]
examples = [
    "litellm",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 100
